# nlp-tp2

./: README.md  hello.py  pyproject.toml
notebooks/: nlp_tp2.ipynb
