[project]
name = "nlp-tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "black[jupyter]>=24.10.0",
    "datasets>=3.2.0",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]
